# Your-Jianpu

./: .gitignore  CHANGELOG.md  README.md  Your-Jianpu-Renderer.cabal  cabal.project.freeze  package.json  pnpm-lock.yaml  run.sh  vite.config.ts
app/: Main.hs
app/Data/: Layout.hs
app/Data/Jianpu/: Abstract.hs  Document.hs  Graphics.hs  Spacing.hs  Syntax.hs  Types.hs
app/Data/Jianpu/Abstract/: CalculateDurations.hs  CalculateTiming.hs  Error.hs  ExtractTagSpans.hs  GenerateLyricsVoices.hs  Main.hs  RenderTree.hs  Types.hs
app/Data/Jianpu/Document/: Abstract.hs  Beaming.hs
app/Data/Jianpu/Graphics/: Config.hs  Render.hs  SVG.hs  Slice.hs  Spacing.hs  Split.hs  StringMetrics.hs  TextMetric.hs  Types.hs  XML.hs
app/Data/Jianpu/Syntax/: CalculateDurations.hs  Document.hs  ExtractTagSpans.hs  Parser.hs  Types.hs
app/Data/Jianpu/Transform/: Lyrics.hs
app/Data/List/: Utils.hs
doc/: beaming.md  syntax.md  tuple.md
src/lib/: Jianpu.ts  JianpuFunctions.ts  MoreFunctions.ts
src/lib/Jianpu/: index.ts
src/lib/Jianpu/Render/: index.ts
src/lib/Jianpu/Script/Parser/: index.ts
src/lib/Parser/: index.ts
src/lib/your-jianpu/: abstract-to-graphical.ts
src/lib/your-jianpu/abstract/: ArMusic.ts  ArMusicalEvent.ts  ArMusicalObject.ts  ArMusicalTag.ts  ArMusicalVoice.ts  ArPositionTag.ts  ArTag.ts  ArTagBegin.ts  ArTagEnd.ts  ArVariableTimeEvent.ts  index.ts
src/lib/your-jianpu/graphical/: GrObject.ts  svg-metadata.ts
src/lib/your-jianpu/graphical/big/: GrMusic.ts  GrPage.ts  GrStaff.ts  GrSystem.ts  GrSystemSlice.ts
src/lib/your-jianpu/graphical/small/: GrGlyph.ts  GrVariableTimeEvent.ts
src/routes/: +page.svelte  RenderBarLine.svelte  RenderCodePoint.svelte  RenderLineElement.svelte  RenderSlur.svelte
src/test/: parse-jianpu-script.test.ts  render-jianpu.test.ts
text-metric/: index.js  package.json  pnpm-lock.yaml  template.html
