cabal-version:      3.0
name:               Your-Jianpu-Renderer
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis: Render a Jianpu from a specialised markup language.
description:
    Render a Jianpu, a kind of musical notation popular in China,
    from a specialised markup language inspired by GUIDO.
license:        GPL-3.0-or-later
license-file:   LICENSE
author:         陈湛明
maintainer:     chenzhanming04@foxmail.com

category:       Graphics
build-type:     Simple

extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

data-files:
      asset/*.svg
    , text-metric/index.js
    , text-metric/package.json
    , text-metric/pnpm-lock.yaml
    , text-metric/template.svg

common warnings
    ghc-options: -Wall

executable yjpc
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021

    other-modules:
        Paths_Your_Jianpu_Renderer
        , Data.Jianpu.Types
        , Data.Jianpu.Syntax
        , Data.Jianpu.Syntax.Parser
        , Data.Jianpu.Syntax.ExtractTagSpans
        , Data.Jianpu.Syntax.CalculateDurations
        , Data.Jianpu.Syntax.Document
        , Data.Jianpu.Document
        , Data.Jianpu.Document.Abstract
        , Data.Jianpu.Abstract
        , Data.Jianpu.Abstract.Error
        , Data.Jianpu.Abstract.GenerateLyricsVoices
        , Data.Jianpu.Graphics
        , Data.Jianpu.Graphics.Slice
        , Data.Jianpu.Graphics.Spacing
        , Data.Jianpu.Graphics.Render
        , Data.Jianpu.Graphics.Config
        , Data.Jianpu.Graphics.StringMetrics
        , Data.Jianpu.Graphics.SVG
        , Data.Layout
        , Data.List.Utils

    build-depends:    base ^>=4.17.2.1
        , mtl
        , parsec
        , containers
        , HaXml
        , IntervalMap
        , process
        , directory
        , filepath

    default-extensions:
          LambdaCase
        , ViewPatterns
        , RecordWildCards
